--- a/src/Styles/App/index.scss
+++ b/src/Styles/App/index.scss
@@ -1,6 +1,7 @@
 
 @import './Varibils.scss';
 @import './Mixing.scss';
+@import './KeyFrames.scss';
 @import './App.scss';
 @import '../Layout/Header.scss';
 @import '../Layout/Layout.scss';
